# GlyphAtlasCpp

./: .gitignore  CMakeLists.txt  FreeTypeTest.cpp  Makefile  README.md  Step.cpp  SvgWriter.cpp  SvgWriter.h  Tuple.h  main.cpp  rects.txt
Algorithms/: Algorithms.cpp  Algorithms.h  CMakeLists.txt  Makefile
FileUtils/: CMakeLists.txt  Colors.h  FileUtils.cpp  FileUtils.h  Makefile  SvgWriter.cpp  SvgWriter.h
FreeType/: CMakeLists.txt  FreeTypeWrapper.cpp  FreeTypeWrapper.h  libfreetype.6.dylib
FreeTypeWrapper/: CMakeLists.txt  FreeTypeWrapper.cpp  Makefile
FreeTypeWrapper/FreeType/: freetype.lib
GlyphAtlas/: GlyphAtlas.cpp  GlyphAtlas.h  Rect.cpp  Rect.h  Slack.h
GlyphAtlasSrc/: CMakeLists.txt  Glyph.h  GlyphAtlas.cpp  GlyphAtlas.h  GlyphAtlasUtils.h  GlyphTexture.cpp  GlyphTexture.h  Makefile  Rect.cpp  Rect.h  Shelf.cpp  Shelf.h
GlyphAtlasSrc/Glyph/: FontKey.h  Glyph.h  GlyphBitmap.h  GlyphDataForAtlas.h  GlyphKey.h
GlyphAtlasSrc/Stepped/: CMakeLists.txt  GlyphAtlasStepped.cpp  GlyphAtlasStepped.h  GlyphTextureStepped.cpp  GlyphTextureStepped.h  Makefile
Math/: CMakeLists.txt  EndPoints.cpp  EndPoints.h  Makefile  PrimitiveTypes.h  Rect.cpp  Rect.h  Tuple.h
SVGWriterSrc/: CMakeLists.txt  Colors.h  SvgWriter.cpp  SvgWriter.h
SimdUtf/: CMakeLists.txt  SimdUtfWrapper.cpp  SimdUtfWrapper.h
SimdUtfWrapper/: CMakeLists.txt  Makefile  SimdUtfWrapper.cpp
SimdUtfWrapper/SimdUtf/: simdutf.lib
Targets/: CppExport.h  FreeTypeTest.cpp  GlyphAtlasTest.cpp  RectAtlasTest.cpp  TestGenerator.cpp
TestData/: test_0.txt
